ocaml-glpk (0.1.5-1) unstable; urgency=low

  * New upstream release.

 -- Samuel Mimram <smimram@debian.org>  Fri,  7 Apr 2006 20:30:38 +0200

ocaml-glpk (0.1.4-1) unstable; urgency=low

  * Updated to OCaml 3.09.1.
  * No longer hardcoding OCaml's ABI.
  * Added a watch file.

 -- Samuel Mimram <smimram@debian.org>  Sun, 11 Dec 2005 16:55:03 +0100

ocaml-glpk (0.1.3-1) unstable; urgency=low

  * New upstream release.
  * Updated Standards-Version to 3.6.2, no change required.

 -- Samuel Mimram <smimram@debian.org>  Sun,  7 Aug 2005 23:14:47 +0200

ocaml-glpk (0.1.2-1) unstable; urgency=low

  * New upstream release.
  * Using OCaml 3.08.3.
  * Updated Standards-Version to 3.6.1.1.
  * Added -g to the CFLAGS.

 -- Samuel Mimram <smimram@debian.org>  Fri, 15 Apr 2005 18:13:17 +0200

ocaml-glpk (0.1.1-1) unstable; urgency=low

  * New upstream release.

 -- Samuel Mimram <samuel.mimram@ens-lyon.org>  Wed, 23 Jun 2004 19:57:08 +0200

ocaml-glpk (0.1.0-1) unstable; urgency=low

  * Initial Release.

 -- Samuel Mimram <samuel.mimram@ens-lyon.org>  Tue, 20 Apr 2004 15:11:42 +0200
