@@ -4,7 +4,7 @@ SOURCES = glpk_stubs.c glpk.mli glpk.ml
 RESULT = glpk
 LIBINSTALL_FILES = $(wildcard *.mli *.cmi *.cma *.cmxa *.a *.so)
 CLIBS = glpk
-CFLAGS = -Wall -ansi -DCAML_NAME_SPACE
+CFLAGS = -Wall -ansi -DCAML_NAME_SPACE -g
 OCAMLDOCFLAGS = -stars
 
 ANNOTATE = yes
