@@ -95,20 +95,16 @@ static struct custom_operations lpx_ops =
   custom_deserialize_default
 };
 
-/* Note: it does the CAMLlocal. */
-static value new_blp(LPX* lp)
-{
-  CAMLlocal1(block);
-  block = caml_alloc_custom(&lpx_ops, sizeof(LPX*), 0, 1);
-  Lpx_val(block) = lp;
-  return(block);
-}
-
 CAMLprim value ocaml_glpk_new_prob(value unit)
 {
   CAMLparam1(unit);
+  CAMLlocal1(block);
+
   LPX *lp = lpx_create_prob();
-  CAMLreturn(new_blp(lp));
+  block = caml_alloc_custom(&lpx_ops, sizeof(LPX*), 0, 1);
+  Lpx_val(block) = lp;
+
+  CAMLreturn(block);
 }
 
 CAMLprim value ocaml_glpk_set_prob_name(value blp, value name)
@@ -471,10 +467,15 @@ BIND_INT_PARAM(use_presolver, LPX_K_PRESOL);
 CAMLprim value ocaml_glpk_read_cplex(value fname)
 {
   CAMLparam1(fname);
+  CAMLlocal1(block);
+
   LPX *lp = lpx_read_cpxlp(String_val(fname));
   if (!lp)
     caml_failwith("Error while reading data in CPLEX LP format.");
-  CAMLreturn(new_blp(lp));
+  block = caml_alloc_custom(&lpx_ops, sizeof(LPX*), 0, 1);
+  Lpx_val(block) = lp;
+
+  CAMLreturn(block);
 }
 
 CAMLprim value ocaml_glpk_write_cplex(value blp, value fname)
