@@ -1,6 +1,7 @@
 ocaml-glpk (0.1.5-1) unstable; urgency=low
 
   * New upstream release.
+  * Updated Standards-Version to 3.7.0, no changes needed.
 
  -- Samuel Mimram <smimram@debian.org>  Fri,  7 Apr 2006 20:30:38 +0200
 
